--- a/index.html
+++ b/index.html
@@ -40,27 +40,30 @@
             align-items: center;
             justify-content: center;
         }
+        
+        #game-area {
+            position: relative;
+            aspect-ratio: 800 / 618;
+            max-width: 100%;
+            max-height: 100%;
+        }
+
         #gameCanvas {
             border: 2px solid #333;
             background-color: #fff;
             box-shadow: 0 10px 20px rgba(0,0,0,0.1);
             border-radius: 8px;
             display: block;
-            /* CSS to scale properly while maintaining aspect ratio */
-            aspect-ratio: 800 / 618;
-            max-width: 100%;
-            max-height: 100%;
-            object-fit: contain;
+            width: 100%;
+            height: 100%;
         }
         #launchScreen {
             position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            max-width: 100%;
-            max-height: 100%;
-            aspect-ratio: 800 / 618;
-            object-fit: cover;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            object-fit: contain;
             border-radius: 8px; /* Match canvas */
             z-index: 10;
             pointer-events: none; /* Allow clicks to pass through to the button */
@@ -99,9 +102,11 @@
 <body>
     <main>
         <div id="gameContainer">
-            <canvas id="gameCanvas"></canvas>
-            <img id="launchScreen" src="https://cdn.jsdelivr.net/gh/misterwilson37/rainingSheep/launchScreen.png" alt="Raining Sheep Game">
-            <button id="startButton">Start Game</button>
+            <div id="game-area">
+                <canvas id="gameCanvas"></canvas>
+                <img id="launchScreen" src="https://cdn.jsdelivr.net/gh/misterwilson37/rainingSheep/launchScreen.png" alt="Raining Sheep Game">
+                <button id="startButton">Start Game</button>
+            </div>
         </div>
         <div id="credits">
             All art and ideas by Nico Wilson<br>
@@ -753,8 +758,7 @@
 
         function gameLoop() {
             // --- Scaling and Resizing ---
-            // This is now handled by CSS, but we set the canvas resolution once.
-            // This loop just draws to the fixed internal resolution.
+            // This is now handled by CSS, but we keep the canvas resolution fixed internally.
             
             // --- Main Game Draw Cycle ---
             clear();
@@ -904,18 +908,18 @@
             e.preventDefault();
             isPointerActive = true;
             const rect = canvas.getBoundingClientRect();
-            const scale = rect.width / GAME_WIDTH;
+            const scaleX = GAME_WIDTH / rect.width;
             const clientX = e.touches ? e.touches[0].clientX : e.clientX;
-            pointerGameX = (clientX - rect.left) / scale;
+            pointerGameX = (clientX - rect.left) * scaleX;
         }
 
         function handlePointerMove(e) {
             if (!isPointerActive) return;
             e.preventDefault();
             const rect = canvas.getBoundingClientRect();
-            const scale = rect.width / GAME_WIDTH;
+            const scaleX = GAME_WIDTH / rect.width;
             const clientX = e.touches ? e.touches[0].clientX : e.clientX;
-            pointerGameX = (clientX - rect.left) / scale;
+            pointerGameX = (clientX - rect.left) * scaleX;
         }
 
         function handlePointerUp(e) {
@@ -940,5 +944,4 @@
     </script>
 </body>
 </html>
-
 
